--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -56,13 +56,25 @@ body{
     color: white;
 }
 .main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     height: 300px;
+    border-radius: 0 0 40px 40px;
 }
 .main__title {
     color: white;
     font-size: 25px;
 }
-/* .input {
+.categories__title {
+    color: white;
+    font-size: 16px;
+    position: absolute;
+    padding-left: 30px;
+    width: 90%;
+}
+.main__input--search {
     background-color: rgba(255, 255, 255, 0.1);
     border: 2px solid white;
     border-radius: 50px;
@@ -73,10 +85,8 @@ body{
     padding: 0px 20px;
     width: 70%;
     outline: none;
-} */
-::placeholder {
-    color: white;
 }
+
 .login {
     background: linear-gradient(#21C08B, #AB88FF );
     display: flex;
