--- a/components/login.html
+++ b/components/login.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./CSS/estilos.css">
+    <link rel="stylesheet" href="../CSS/estilos.css">
     <title>Login</title>
 </head>
 <body>
     <header class="header">
-        <img  class="header__img" src="logo-platzi-video-BW2.png" alt="logo platzi">
+        <img  class="header__img" src="../assets/logo-platzi-video-BW2.png" alt="logo platzi">
         <div class="header__menu">
             <div class="header__menu--profile">
-                <img src="./user-icon.png" alt="User" />
+                <img src="../assets/user-icon.png" alt="User" />
                 <p>Perfil</p>
             </div>
             <ul>
@@ -38,8 +38,8 @@
                 </div>
             </form>
             <section class="login__container--social-media">
-                <div><img src="./assets/google-icon.png" alt="Google">Inicia Sesión con Google</div>
-                <div><img src="./assets/twitter-icon.png" alt="Google">Inicia Sesión con Twitter</div>
+                <div><img src="../assets/google-icon.png" alt="Google">Inicia Sesión con Google</div>
+                <div><img src="../assets/twitter-icon.png" alt="Google">Inicia Sesión con Twitter</div>
             </section>
             <p class="login__container--register">No tienes ninguna cuenta <a href="">Regístrate</a></p>
         </section>
