--- a/components/register.html
+++ b/components/register.html
@@ -5,14 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./CSS/estilos.css">
+    <link rel="stylesheet" href="../CSS/estilos.css">
     <title>Register</title>
 </head>
 <body>
     <header class="header">
-        <img  class="header__img" src="logo-platzi-video-BW2.png" alt="logo platzi">
+        <img  class="header__img" src="../assets/logo-platzi-video-BW2.png" alt="logo platzi">
     </header>
-    
     <section class="login">
         <section class="login__container">
             <h2>Registrarme</h2>
@@ -33,3 +32,4 @@
     </footer>
 </body>
 </html>
+
