--- a/components/login.html
+++ b/components/login.html
@@ -27,8 +27,8 @@
         <section class="login__container">
             <h2>Inicia sesión</h2>
             <form action="" class="login__container--form">
-                <input class="input" type="text" placeholder="Correo">
-                <input class="input" type="password" placeholder="Contraseña">
+                <input aria-label="Ingrese su Correo" class="input" type="text" placeholder="Correo">
+                <input aria-label="Ingrese su Contraseña" class="input" type="password" placeholder="Contraseña">
                 <button class="button">Iniciar sesión</button>
                 <div class="login__container--remember-me">
                     <label>
