--- a/components/register.html
+++ b/components/register.html
@@ -10,15 +10,15 @@
 </head>
 <body>
     <header class="header">
-        <img  class="header__img" src="../assets/logo-platzi-video-BW2.png" alt="logo platzi">
+        <img tabindex="0" class="header__img" src="../assets/logo-platzi-video-BW2.png" alt="logo de bienvenida a platzivideo">
     </header>
     <section class="login">
         <section class="login__container">
-            <h2>Registrarme</h2>
+            <h2 tabindex="0">Registrarme</h2>
             <form action="" class="login__container--form">
-                <input class="input" type="text" placeholder="Nombre">
-                <input class="input" type="text" placeholder="Correo">
-                <input class="input" type="password" placeholder="Contraseña">
+                <input aria-label="Ingrese su nombre" class="input" type="text" placeholder="Nombre">
+                <input aria-label="Ingrese su Correo" class="input" type="text" placeholder="Correo">
+                <input aria-label="Ingrese su Contraseña" class="input" type="password" placeholder="Contraseña">
                 <button class="button">Registrarme</button>
             </form>
 
